--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,11 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
+          <a class="navbar-brand" href="/">Home</a>
+        </div>
+        <div class="navbar-header navbar-right">
           <a class="navbar-brand" href="/">Student App</a>
         </div>
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="javascript:void(0)">Page 2</a></li>
-          <li><a href="javascript:void(0)">Page 3</a></li>
-        </ul>
       </div>
     </nav>
     <% flash.each do |key, value| %>
